--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "install:all": "npm install && npm install --workspace=packages/backend && npm install --workspace=packages/frontend && npm install --workspace=packages/shared"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/jest": "^29.5.14",
+    "concurrently": "^8.2.2",
+    "jest": "^27.5.1"
   }
 }
