--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "@smartcart/backend",
   "version": "1.0.0",
   "description": "Backend API server",
@@ -7,7 +8,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "jest"
   },
   "dependencies": {
     "@smartcart/shared": "^1.0.0",
@@ -17,10 +19,13 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
+  "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.4.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
   }
