--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -2,7 +2,7 @@ PORT=3001
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:3000
 
-CATEGORY_URL=http://localhost:8080/Category
+OPEN_AI_URL=http://localhost:8080/Category
 
 # Supabase Configuration
 SUPABASE_URL=your_supabase_project_url
