--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "../../",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
