--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\" \"npm run dev:mock\"",
     "dev:backend": "npm run dev --workspace=packages/backend",
     "dev:frontend": "npm run start --workspace=packages/frontend",
+    "dev:mock": "node packages/mock/mockGptSrv/app.js",
     "build": "npm run build --workspace=packages/backend && npm run build --workspace=packages/frontend",
     "install:all": "npm install && npm install --workspace=packages/backend && npm install --workspace=packages/frontend && npm install --workspace=packages/shared"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/swagger-ui-express": "^4.1.8",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
-    "jest": "^30.0.0",
-    "ts-jest": "^29.4.0",
-    "jest": "^27.5.1"
+    "jest": "^29.7.0",
+    "postcss": "^8.5.6",
+    "ts-jest": "^29.4.0"
+  },
+  "dependencies": {
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
