--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "ts-jest": "^29.4.0"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "swagger-jsdoc": "^6.2.8",
