--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,6 +19,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +51,7 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "@types/leaflet": "^1.9.19",
+    "@types/swagger-ui-express": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
