--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -2,8 +2,7 @@ PORT=3001
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:3000
 
-OPEN_AI_URL=http://localhost:8080/Category
-
+MOCK_GPT_URL=http://localhost:8080//categorize-products
 # Supabase Configuration
 
 SUPABASE_URL=https://xoherohwhkougweafxfo.supabase.co
