--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -12,5 +12,13 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 SUPABASE_URL=your_supabase_project_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
 
+OPENCAGE_API_KEY=5e881503b848483b86885632277dd5df
+
+GPT_MODE=demo
+
+MOCK_GPT_URL=http://localhost:8080/categorize-products
+
+OPENAI_API_KEY=abc
+
 # For production
 # SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
