--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "ts-jest": "^29.4.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
+    "react-redux": "^9.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
