--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "install:all": "npm install && npm install --workspace=packages/backend && npm install --workspace=packages/frontend && npm install --workspace=packages/shared"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0",
@@ -26,9 +28,13 @@
     "ts-jest": "^29.4.0"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
+    "basic-ftp": "^5.0.5",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xml2js": "^0.6.2"
   }
 }
