--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.10.1",
     "react-redux": "^9.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
