--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@smartcart/shared": "^1.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -14,9 +15,11 @@
     "@types/react-dom": "^19.1.5",
     "axios": "^1.4.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "swagger-jsdoc": "^6.2.8",
@@ -51,6 +54,7 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "@types/leaflet": "^1.9.19",
+    "@types/react-redux": "^7.1.34",
     "@types/swagger-ui-express": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
