--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@smartcart/shared": "^1.0.0",
     "@testing-library/dom": "^10.4.0",
