--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -15,7 +15,8 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*", "scripts/**/*", "jest.config.js"],
   "exclude": ["node_modules", "dist"],
