--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,40 +1,39 @@
-{
-  "name": "@smartcart/backend",
-  "version": "1.0.0",
-  "description": "Backend API server",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "clean": "rm -rf dist",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@smartcart/shared": "^1.0.0",
-    "@supabase/supabase-js": "^2.50.3",
-    "adm-zip": "^0.5.16",
-    "basic-ftp": "^5.0.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.18.2",
-    "iconv-lite": "^0.6.3",
-    "node-cron": "^4.2.0",
-    "nodemailer": "^7.0.5",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "xml2js": "^0.6.2"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.19.6",
-    "@types/nodemailer": "^6.4.17",
-    "@types/swagger-ui-express": "^4.1.8",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "ts-jest": "^29.3.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.8.3"
-  }
+  {"name": "@smartcart/backend",
+  "version": "1.0.0",
+  "description": "Backend API server",
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "clean": "rm -rf dist",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@smartcart/shared": "^1.0.0",
+    "@supabase/supabase-js": "^2.50.3",
+    "adm-zip": "^0.5.16",
+    "basic-ftp": "^5.0.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "iconv-lite": "^0.6.3",
+    "node-cron": "^4.2.0",
+    "nodemailer": "^7.0.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.19.6",
+    "@types/nodemailer": "^6.4.17",
+    "@types/swagger-ui-express": "^4.1.8",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.8.3"
+  }
 }
