--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,18 +1,40 @@
+// {
+//     "compilerOptions": {
+    
+//       "target": "ES2020",
+//       "module": "commonjs",
+//       "lib": ["ES2020"],
+//       "outDir": "./dist",
+//       "rootDir": "./src",
+//       "strict": true,
+//       "esModuleInterop": true,
+//       "skipLibCheck": true,
+//       "forceConsistentCasingInFileNames": true,
+//       "declaration": true,
+//       "declarationMap": true,
+//       "sourceMap": true
+//     },
+//     "include": ["src/**/*"],
+//     "exclude": ["node_modules", "dist"]
+//   }
+
+
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "commonjs",
-      "lib": ["ES2020"],
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true,
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
-  }
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "lib": ["ES2020"],
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
+}
