--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -48,13 +48,13 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "composite": true
   },
   "include": [
     "src/**/*",
     "scripts/**/*",
-    "jest.config.js",
-    "../../shared/src" // ✅ הוספנו את זה
+    "jest.config.js"
   ],
   "exclude": [
     "node_modules",
@@ -62,6 +62,9 @@
     "**/*.spec.ts",
     "**/*.test.ts",
     "src/services/tests/**"
+  ],
+  "references": [
+    { "path": "../shared" }
   ],
   "ts-node": {
     "esm": false
