--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,13 +1,19 @@
 {
+  "files": [],
+  "references": [
+    { "path": "packages/shared" },
+    { "path": "packages/backend" },
+    { "path": "packages/frontend" }
+  ],
   "compilerOptions": {
     "target": "ESNext",
     "module": "CommonJS",
+    "moduleResolution": "Node",
     "baseUrl": ".",
     "paths": {
       "@smartcart/shared": ["packages/shared/src/index.ts"],
       "@smartcart/shared/*": ["packages/shared/src/*"]
     },
-    "moduleResolution": "Node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
