changes in 3 tsconfig and base 2

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -52,10 +52,13 @@
     "composite": true
   },
   "include": [
-    "src/**/*",
-    "scripts/**/*",
-    "jest.config.js"
-  ],
+  "src/**/*",
+  "scripts/**/*",
+  "jest.config.js",
+  "utils/**/*",
+  "mockData/**/*",
+  "../../shared/src"
+],
   "exclude": [
     "node_modules",
     "dist",
