--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -12,7 +12,16 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 # SUPABASE_URL=your_supabase_project_url
 # SUPABASE_ANON_KEY=your_supabase_anon_key
 
-OPENCAGE_API_KEY=972c895e375348c981934d6e4f1bbf1f
+# OPENCAGE_API_KEY=5e881503b848483b86885632277dd5df
+OPENCAGE_API_KEY=7f90b780ea1a445ba22eb668d0583d8b
+
+
+
+
+
+
+JWT_SECRET=aVbC3fG5hJ7kL9mN1oP2qR4sT6uV8wX0yZ!@
+
 
 GPT_MODE=demo
 
