--- a/package.json
+++ b/package.json
@@ -20,19 +20,23 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/twilio": "^3.19.2",
     "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "postcss": "^8.5.6",
     "sweetalert2": "^11.22.2",
-    "ts-jest": "^29.4.0"
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.8.0",
     "xml2js": "^0.6.2"
   }
 }
