--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -57,7 +57,9 @@
   "jest.config.js",
   "utils/**/*",
   "mockData/**/*",
-  "../../shared/src"
+  "mockData/**/*.json",
+  "../../shared/src",
+  "url.ts"
 ],
   "exclude": [
     "node_modules",
